--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="google-site-verification" content="okJ7k9bqssfpX2e-TzDuRfpa1JeW7mhAe8rAQBKTGmo" />
     <title>{{ page.title }}</title>
     <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   </head>
